--- a/index.html
+++ b/index.html
@@ -1,188 +1,181 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Pratham Agrawal — Software Developer</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Space+Mono:wght@400;700&display=swap"
-        rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a2d9b8a6f0.js" crossorigin="anonymous"></script>
-</head>
+    <title>Pratham Agrawal – Portfolio</title>
 
-<body>
-    <!-- Particles background -->
+    <!-- Styles -->
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <!-- PARTICLES -->
     <div id="particles-js" aria-hidden="true"></div>
 
-    <!-- Floating social bar -->
-    <nav class="social-bar" aria-hidden="false">
-        <a href="#" aria-label="GitHub" title="GitHub"><i class="fab fa-github"></i></a>
-        <a href="#" aria-label="LinkedIn" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-        <a href="#" aria-label="X / Twitter" title="X"><i class="fab fa-x-twitter"></i></a>
-    </nav>
+    <!-- NAVBAR -->
+    <header class="site-header">
+      <div class="brand">Pratham</div>
+      <nav id="navLinks" class="nav-links" aria-label="Main navigation">
+        <a href="#home">Home</a>
+        <a href="#projects">Projects</a>
+        <a href="#tech">Technologies</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <div class="header-actions">
+        <button
+          id="themeToggle"
+          class="icon-btn"
+          aria-pressed="false"
+          title="Toggle theme"
+        >
+          <i id="themeIcon" class="fa fa-moon" aria-hidden="true"></i>
+        </button>
+        <button
+          id="menuBtn"
+          class="icon-btn menu-btn"
+          aria-expanded="false"
+          aria-label="Open menu"
+        >
+          <span class="bar"></span><span class="bar"></span
+          ><span class="bar"></span>
+        </button>
+      </div>
+    </header>
 
-    <!-- Main wrapper -->
-    <div class="wrap">
-        <header class="site-header">
-            <div class="brand">
-                <div class="logo">PA</div>
-                <div class="brand-text">
-                    <div class="name">Pratham Agrawal</div>
-                    <div class="role">Software Developer</div>
-                </div>
+    <!-- MAIN CONTENT -->
+    <main class="container" id="page-content">
+      <!-- HERO -->
+      <section id="home" class="hero reveal">
+        <div class="hero-inner">
+          <p class="eyebrow">Hi – I build delightful web experiences</p>
+          <h1 class="title">I'm <span class="accent">Pratham Agrawal</span></h1>
+          <h2 class="subtitle"><span id="typed" aria-live="polite"></span></h2>
+          <p class="lead">
+            I create fast, animated and aesthetic web applications.
+          </p>
+          <div class="hero-cta">
+            <a href="https://drive.google.com/file/d/1eXc-d-75Q2-7EIYgleoiK5H3Y7Vit0_1/view?usp=drivesdk" download class="btn primary"
+              >Download Resume</a
+            >
+            <a href="#projects" class="btn ghost">View Projects</a>
+          </div>
+        </div>
+        <aside class="profile-card">
+          <div class="avatar" aria-hidden="true">PA</div>
+          <div class="pc-info">
+            <div class="pc-name">Pratham Agrawal</div>
+            <div class="pc-role">Software Developer</div>
+            <p class="pc-bio">
+              Frontend engineer focusing on UI, animation &
+              performance.
+            </p>
+          </div>
+        </aside>
+      </section>
+
+      <!-- PROJECTS -->
+      <section id="projects" class="section reveal">
+        <h3 class="section-title">Featured Project</h3>
+        <div class="projects-grid">
+          <article class="project-card tilt">
+            <div class="thumb default-thumb"></div>
+            <h4>Portfolio Website</h4>
+            <p>
+              A modern, animated portfolio website featuring particle effects,
+              custom cursors, 3D tilt interactions, and smooth GSAP animations.
+              Built with vanilla JavaScript and optimized for performance.
+            </p>
+            <div class="project-meta">
+              <span class="meta-tech">HTML • CSS • JavaScript</span>
+              <a
+                class="btn-sm"
+                href="https://github.com"
+                target="_blank"
+                rel="noopener"
+                >View</a
+              >
             </div>
+          </article>
+        </div>
+      </section>
 
-            <div class="controls">
-                <button id="themeToggle" class="icon-btn" aria-pressed="false" title="Toggle theme">
-                    <i id="themeIcon" class="fa fa-moon"></i>
-                </button>
+      <!-- TECHNOLOGIES -->
+      <section id="tech" class="section reveal">
+        <h3 class="section-title">Technologies</h3>
+        <div class="tech-box">
+          <div class="tech-grid">
+            <img
+              class="tech-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
+              alt="HTML5"
+            />
+            <img
+              class="tech-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg"
+              alt="CSS3"
+            />
+            <img
+              class="tech-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+              alt="JavaScript"
+            />
+            <img
+              class="tech-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg"
+              alt="C"
+            />
+            <img
+              class="tech-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg"
+              alt="C++"
+            />
+            <img
+              class="tech-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
+              alt="Python"
+            />
+            <img
+              class="tech-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg"
+              alt="MongoDB"
+            />
+          </div>
+        </div>
+      </section>
 
-                <button id="menuToggle" class="icon-btn menu-btn" aria-expanded="false" aria-controls="mainNav"
-                    aria-label="Open menu">
-                    <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-                </button>
-            </div>
+      <!-- CONTACT -->
+      <section id="contact" class="section reveal">
+        <h3 class="section-title">Contact</h3>
+        <p class="lead" style="text-align: center">
+          Email:
+          <a class="accent-link" href="mailto:agrawalpratham525@gmail.com"
+            >agrawalpratham525@gmail.com</a
+          >
+        </p>
+      </section>
+    </main>
 
-            <nav id="mainNav" class="nav">
-                <a href="#home">Home</a>
-                <a href="#projects">Projects</a>
-                <a href="#about">About</a>
-                <a href="#contact" class="cta">Contact</a>
-            </nav>
-        </header>
+    <!-- FOOTER -->
+    <footer class="site-footer">
+      <p>© <span id="year"></span> Pratham Agrawal</p>
+      <div class="footer-social">
+        <a href="https://github.com/PrathamAgrawal525" aria-label="GitHub"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/pratham-agrawal-9aaa10358/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="https://x.com/PrathamA75447" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a>
+      </div>
+    </footer>
 
-        <main>
-            <!-- HERO -->
-            <section id="home" class="hero reveal">
-                <div class="hero-left">
-                    <div class="eyebrow">Hi — I build delightful web experiences</div>
-                    <h1>I'm <span class="accent">Pratham</span> — a <span id="typed" class="mono"></span></h1>
-                    <p class="lead">I create fast, accessible and animated web apps. I design delightful
-                        micro-interactions and ship production-grade code.</p>
-
-                    <div class="hero-actions">
-                        <a href="#projects" class="btn">View Projects</a>
-                        <a href="#contact" class="link">Say hello 👋</a>
-                    </div>
-
-                    <div class="chips">
-                        <span>HTML5</span><span>CSS3/TailwindCSS</span><span>JavaScript
-                            (ES6+)</span><span>C/C++</span><span>Python</span><span>Git & GitHub</span><span>Responsive
-                            Design</span><span>Accessibility</span><span>Performance</span>
-                    </div>
-                </div>
-
-                <aside class="profile-card reveal" aria-labelledby="profileTitle">
-                    <div class="avatar" role="img" aria-label="Pratham's avatar">PA</div>
-                    <div>
-                        <div id="profileTitle" class="pc-name">Pratham Agrawal</div>
-                        <div class="pc-sub">Frontend Developer</div>
-                    </div>
-                    <p class="pc-bio">I focus on performance, accessibility and delightful animations. Open to remote
-                        work and collaboration.</p>
-
-                    <div class="stats">
-                        <div><strong>2+</strong><span>Projects</span></div>
-                        <div><strong>2</strong><span>Years</span></div>
-                        <div><strong>Open</strong><span>For work</span></div>
-                    </div>
-                </aside>
-            </section>
-
-            <!-- PROJECTS -->
-            <section id="projects" class="section reveal">
-                <h2 class="section-title">Featured Projects</h2>
-                <div class="projects-grid">
-                    <article class="project glass">
-                        <div class="project-media" aria-hidden="true">
-                            <!-- inline SVG placeholder -->
-                            <svg viewBox="0 0 400 220" preserveAspectRatio="xMidYMid slice" class="proj-svg" role="img"
-                                aria-label="Project image">
-                                <rect width="400" height="220" fill="url(#g)"></rect>
-                                <defs>
-                                    <linearGradient id="g" x1="0" x2="1">
-                                        <stop offset="0" stop-color="#7c5cff"></stop>
-                                        <stop offset="1" stop-color="#00d4ff"></stop>
-                                    </linearGradient>
-                                </defs>
-                            </svg>
-                        </div>
-                        <h3>Telemetry Dashboard</h3>
-                        <p>Realtime charts, zoom & brush, progressive loading for large datasets.</p>
-                        <div class="proj-meta"><span>React • D3</span><a class="btn-sm" href="#">Live</a></div>
-                    </article>
-
-                    <article class="project glass">
-                        <div class="project-media">
-                            <svg viewBox="0 0 400 220" class="proj-svg" role="img" aria-label="Project image 2">
-                                <rect width="400" height="220" fill="url(#g2)"></rect>
-                                <defs>
-                                    <linearGradient id="g2">
-                                        <stop offset="0" stop-color="#00d4ff"></stop>
-                                        <stop offset="1" stop-color="#7c5cff"></stop>
-                                    </linearGradient>
-                                </defs>
-                            </svg>
-                        </div>
-                        <h3>Design System Kit</h3>
-                        <p>Token-driven system with accessible components and Storybook tests.</p>
-                        <div class="proj-meta"><span>TS • Storybook</span><a class="btn-sm" href="#">Repo</a></div>
-                    </article>
-
-                    <article class="project glass">
-                        <div class="project-media">
-                            <svg viewBox="0 0 400 220" class="proj-svg" role="img" aria-label="Project image 3">
-                                <rect width="400" height="220" fill="url(#g3)"></rect>
-                                <defs>
-                                    <linearGradient id="g3">
-                                        <stop offset="0" stop-color="#ff8a65" />
-                                        <stop offset="1" stop-color="#f7b733" />
-                                    </linearGradient>
-                                </defs>
-                            </svg>
-                        </div>
-                        <h3>E-commerce PWA</h3>
-                        <p>Offline-first PWA with SSR, optimized UX and optimistic cart updates.</p>
-                        <div class="proj-meta"><span>Next.js • Vercel</span><a class="btn-sm" href="#">Demo</a></div>
-                    </article>
-                </div>
-            </section>
-
-            <!-- ABOUT -->
-            <section id="about" class="section reveal">
-                <h2 class="section-title">About</h2>
-                <p class="muted">I ship production apps with a focus on animation, accessibility and performance. I
-                    collaborate with designers & backend engineers to build delightful products.</p>
-            </section>
-
-            <!-- CONTACT -->
-            <section id="contact" class="section reveal">
-                <h2 class="section-title">Contact</h2>
-                <form id="contactForm" class="contact-form" aria-label="Contact form">
-                    <input name="name" placeholder="Your name" required>
-                    <input name="email" type="email" placeholder="Email" required>
-                    <textarea name="message" rows="5" placeholder="Message" required></textarea>
-                    <div class="form-row">
-                        <button type="submit" class="btn">Send message</button>
-                        <div class="muted small">Or email <a href="mailto:agrawalpratham525@gmail.com"
-                                class="accent">agrawalpratham525@gmail.com</a></div>
-                    </div>
-                </form>
-            </section>
-        </main>
-
-        <footer class="site-footer">
-            <div>© <span id="year"></span> Pratham Agrawal</div>
-            <div class="muted">Built with HTML, CSS & JavaScript</div>
-        </footer>
-    </div>
-
-    <!-- Particles JS (lightweight) -->
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
     <script src="app.js"></script>
-</body>
-
+  </body>
 </html>
